===> 2018.06.01
	- various clean-ups and tweaks
	- update blackarch installer to version 0.X
	- included kernel 4.16.X
	- updated all blackarch tools and packages
	- updated all system packages
	- updated all window manager menus (awesome, fluxbox, openbox)
	- re-add multilib

===> 2017.12.11
	- update blackarch-installer to version 0.6.2 (most important change)
	- include kernel 4.14.4
	- updated lot's of blackarch tools and packages
	- updated all system packages
	- bugfix release! (see blackarch-installer)

===> 2017.11.24
	- various clean-ups and tweaks
	- updated blackarch installer to version 0.6
	- included kernel 4.13.12
	- updated all blackarch tools and packages
	- updated all system packages
	- updated all window manager menus (awesome, fluxbox, openbox)

===> 2017.08.30
	- bugfix: strap.sh (removed 'http:' for pgp keyserver)
	- updated blackarch installer to version 0.5.2 (update: sha1 sum of strap.sh)
	- included kernel 4.12.8
	- updated a lot of blackarch tools
	- updated all system packages
	- updated all window manager menus (awesome, fluxbox, openbox)

===> 2017.06.14
	- bugfix release: perl libraries rebuilt due to perl upgrade
	- include kernel 4.11.4

===> 2017.06.13
	- added more than 100 new tools
	- update blackarch installer to version 0.5 (bugfixes + features)
	- fix several tools (dependencies, installs)
	- include kernel 4.11.3
	- update all blackarch tools
	- update all system packages
	- update all window manager menus (awesome, fluxbox, openbox)


===> 2017.03.01
	- add more than 50 new tools
	- update blackarch installer to 0.3.3 (bugfixes)
	- fix several tools (dependencies, installs)
	- include kernel 4.9.11
	- updated all system packages
	- updated all blackarch tools
	- updated menu entries for windows managers (awesome, fluxbox, openbox)

===> 2017.01.28
	- add 20 new tools
	- update blackarch installer to 0.3.2 (bugfixes)
	- fix shadow permissions (thx to ldionmarcil)
	- fix f*cking ruby tools (wpscan, metasploit, etc.)