@@ -1,0 +1,291 @@
+ack
+acpi
+afl
+afpfs-ng
+aircrack-ng
+alsa-utils
+arch-install-scripts
+archlinux-keyring
+arduino
+argon2
+arp-scan
+atftp
+awesome
+b43-fwcutter
+base-devel
+bash
+bash-completion
+batctl
+bc
+bettercap
+bind-tools
+binwalk
+blackarch-dwm
+blackarch-installer
+blackarch-keyring
+bluez
+bluez-firmware
+bluez-hid2hci
+bluez-utils
+bridge-utils
+bsdiff
+btrfs-progs
+bully
+cadaver
+capstone
+checksec
+chntpw
+chromium
+cmake
+corkscrew
+cppcheck
+create_ap
+cryptsetup
+ctags
+darkhttpd
+darkstat
+dcfldd
+ddrescue
+device-mapper
+dhclient
+dialog
+dmraid
+dnsmasq
+dnstracer
+dnsutils
+dosfstools
+dscanner
+dsniff
+elfkickers
+elinks
+etherape
+ettercap
+exiv2
+expac
+extundelete
+f2fs-tools
+fcrackzip
+feh
+findmyhash
+firefox
+flashplugin
+flawfinder
+fluxbox
+foremost
+fping
+freeradius
+gdb
+geoip
+git
+gnu-netcat
+gnuradio
+gpm
+gptfdisk
+gqrx
+greenbone-security-assistant
+grub
+hackrf
+hashcat
+hashcat-utils
+haveged
+hdparm
+hping
+htop
+httping
+httptunnel
+httrack
+hydra
+i3status
+i3-wm
+inotify-tools
+iodine
+ipmitool
+iputils
+ipw2100-fw
+ipw2200-fw
+ipython
+irssi
+iw
+jad
+jadx
+jhead
+john
+kismet
+lftp
+libpst
+linux-atm
+linux-firmware
+lldb
+lorcon
+lsof
+lxdm
+lynis
+macchanger
+makepasswd
+masscan
+mdk3
+medusa
+mercurial
+mesa
+metasploit
+miredo
+mitmproxy
+mkinitcpio
+mlocate
+moreutils
+mpv
+mtools
+mtr
+mupdf
+nbtscan
+ncrack
+nemesis
+nfs-utils
+ngrep
+nikto
+nilfs-utils
+nmap
+ntfs-3g
+ntp
+obconf
+obfsproxy
+oblogout
+obmenu
+openbox
+openbox-themes
+openconnect
+openssh
+openvas-cli
+openvas-libraries
+openvas-manager
+openvas-scanner
+open-vm-tools
+openvpn
+ophcrack
+p0f
+p7zip
+packer-io
+packeth
+partclone
+parted
+partimage
+pathod
+pdfcrack
+peda
+perl-image-exiftool
+pfff
+pixiewps
+pkgfile
+ppp
+pptpclient
+proxychains-ng
+proxytunnel
+pwndbg
+pyrit
+python2-capstone
+python2-jsbeautifier
+python2-yara
+python-capstone
+python-jsbeautifier
+radare2
+reaver
+rfkill
+rkhunter
+ropgadget
+ropper
+rp-pppoe
+rsync
+rtorrent
+scanmem
+scapy
+scpay3k
+scrapy
+scrot
+shellcheck
+siege
+sleuthkit
+smali
+smartmontools
+socat
+spectrwm
+speedtouch
+splint
+sqlmap
+ssdeep
+sshuttle
+sslh
+sslscan
+steghide
+strace
+stunnel
+subbrute
+sudo
+swaks
+swftools
+sysdig
+tcpdump
+tcpflow
+tcpreplay
+testdisk
+thc-ipv6
+tinc
+tinyproxy
+tor
+torsocks
+traceroute
+truecrypt
+ttf-indic-otf
+tzdata
+unace
+unhide
+unrar
+unzip
+upx
+usb_modeswitch
+valabind
+valgrind
+veracrypt
+vidalia
+vim
+virtualbox-guest-utils
+volatility
+vpnc
+vulscan
+wavemon
+wicd
+wicd-gtk
+wifite
+wine
+wine-mono
+winetricks
+wireless_tools
+wireshark-cli
+wireshark-gtk
+wpa_actiond
+wpa_supplicant
+wpscan
+wvdial
+xf86-input-synaptics
+xf86-input-vmmouse
+xf86-video-amdgpu
+xf86-video-ati
+xf86-video-dummy
+xf86-video-fbdev
+xf86-video-intel
+xf86-video-nouveau
+xf86-video-openchrome
+xf86-video-vesa
+xf86-video-vmware
+xf86-video-voodoo
+xl2tpd
+xorg-server
+xorg-xbacklight
+xorg-xdm
+xorg-xinit
+xterm
+yara
+zaproxy
+zd1211-firmware
+zip
+zmap
+zsh
